minikube/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: grpc-app
        image: docker.io/salrashid123/grpc_stats_envoy_istio:prom
        imagePullPolicy: IfNotPresent
        args: [
          "--grpcport=0.0.0.0:50051",
          "--usetls",
          "--tlsCert=/certs/grpc_server_crt.pem",
          "--tlsKey=/certs/grpc_server_key.pem"        
        ]
        ports:
        - containerPort: 50051
        volumeMounts:
          - name: grpc-certs-vol
            mountPath: /certs
            readOnly: true

      volumes:
      - name: grpc-certs-vol
        secret:
          secretName: grpc-secret
          items:
          - key: grpc_server_crt.pem
            path: grpc_server_crt.pem
          - key: grpc_server_key.pem
            path: grpc_server_key.pem
