minikube/fe-srv-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv-ingress
  labels:
    type: fe-srv
spec:
  type: ClusterIP 
  ports:
  - name: fe
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: fe
