minikube/fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"  
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"  
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - server.domain.com
    secretName: fe-secret
  rules:
  - host: "server.domain.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix        
        backend:
          service:
            name: fe-srv-ingress
            port:
              number: 50051
